@@ -1,3 +1,9 @@
+2010-10-07  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
+	Enhance the `smooth' benchmark.
+	
+	* benchmarks/smooth/smooth.c: Make iteration optional. Optimize.
+
 2010-10-06  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
 	New benchmark `smooth' implementing a simple convolution.
